# RapidFuzz

./: .clang-format  .codespell-ignore-lines  .coveragerc  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  Benchmarks.md  CHANGELOG  CHANGELOG.md  CHANGELOG.rst  CITATION.bib  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  api_differences.md  make.bat  mkdocs.yml  pyproject.toml  setup.cfg  setup.py  stubtest_allowlist.txt
.github/: FUNDING.yml
_custom_build/: backend.py
bench/: benchmark.py  benchmark_cdist.py  benchmark_cpdist.py  benchmark_damerau_levenshtein.py  benchmark_extractOne.py  benchmark_fuzz.py  benchmark_indel_levenshtein.py  benchmark_jaro.py  benchmark_jaro_winkler.py  benchmark_osa.py  benchmark_partial_ratio_long_needle.py  benchmark_partial_ratio_short_needle.py  benchmark_results.txt  benchmark_scorer.py  benchmark_uniform_levenshtein.py  benchmark_visualize.py  common.py  fuzz_bench.py  requirements.txt
build_utils/: build_libomp.sh
capi/: rapidfuzz_capi.h  rapidfuzz_capi.pxd
cmake/: CheckCPUArch.cmake
cpp/: fuzz.hpp  levenshtein.cpp  levenshtein.hpp  main.cpp  mybenchmark  test.txt  utils.hpp
docs/: Contributing.rst  Installation.rst  License.rst  References.rst  benchmarks.md  changelog_link.rst  conf.py  contributing.md  contributing.rst  fuzz.rst  index.md  index.rst  installation.md  installation.rst  license.md  process.rst  refs.bib  requirements.txt  string_metric.rst  usage.md  utils.rst
python/: rapidfuzz.cpp
rapidfuzz/: CMakeLists.txt  __init__.py  __init__.pyi  cpp_common.hpp  cpp_common.pxd  cpp_fuzz.pyx  cpp_process.pyx  cpp_process_cdist.hpp  cpp_process_cdist.pyx  cpp_string_metric.pyx  fuzz.py  fuzz.pyi  fuzz_cpp.hpp  fuzz_cpp.pyx  fuzz_py.py  fuzz_py.pyi  generate.sh  process.py  process.pyi  process_cdist_py.py  process_cpp.hpp  process_cpp.pyx  process_py.py  string_metric.py  string_metric.pyi  string_metric_py.py  string_metric_py.pyi  utils.cpp  utils.py  utils.pyi  utils_cpp.pyx  utils_py.py
rapidfuzz/distance/: CMakeLists.txt  Hamming.py  Hamming.pyi  Hamming.pyx  Hamming_cpp.pyx  Hamming_py.py  Hamming_py.pyi  Indel.py  Indel.pyx  Indel_cpp.pyx  Indel_py.py  Indel_py.pyi  Jaro.py  Jaro.pyi  JaroWinkler.py  JaroWinkler.pyx  LCSseq.py  LCSseq.pyi  LCSseq.pyx  LCSseq_cpp.pyx  LCSseq_py.py  LCSseq_py.pyi  Levenshtein.py  Levenshtein.pyi  Levenshtein.pyx  Levenshtein_cpp.pyx  Levenshtein_py.py  Levenshtein_py.pyi  __init__.py  __init__.pyi  _initialize.pxd  _initialize.pyx  _initialize_py.py  edit_based.hpp
src/: CMakeLists.txt  backup.cpp  cpp_common.hpp  cpp_common.pxd  cpp_fuzz.cpp  cpp_fuzz.hpp  cpp_fuzz.pyx  cpp_fuzz.pyx.j2  cpp_fuzz_template.pyx  cpp_multiprocess.cpp  cpp_multiprocess.pyx  cpp_process.cpp  cpp_process.hpp  cpp_process.pyx  cpp_process_cdist.cpp  cpp_process_cdist.hpp  cpp_process_cdist.pyx  cpp_scorer.hpp  cpp_string_metric.cpp  cpp_string_metric.hpp  cpp_string_metric.pyx  cpp_string_metric_template.pyx  cpp_utils.cpp  cpp_utils.hpp  cpp_utils.pyx  py2_common.hpp  py2_utils.hpp  py3_common.hpp  py3_utils.hpp  py_abstraction.cpp  py_common.hpp  py_fuzz.cpp  py_fuzz.hpp  py_fuzz_impl.hpp  py_levenshtein.cpp  py_process.cpp  py_process.hpp  py_string_metric.cpp  py_string_metric.hpp  py_utils.cpp  (+3 more)
src/cython/: CMakeLists.txt  cpp_common.hpp  cpp_common.pxd  cpp_fuzz.hpp  cpp_fuzz.pyx  cpp_process.hpp  cpp_process.pyx  cpp_process_cdist.hpp  cpp_process_cdist.pyx  cpp_string_metric.hpp  cpp_string_metric.pyx  cpp_utils.hpp  cpp_utils.pyx  generate.sh  optional.pxd  utils.hpp
src/cython/algorithm/edit_based/: CMakeLists.txt  Hamming.pyx  Indel.pyx  Jaro.pyx  JaroWinkler.pyx  Levenshtein.pyx  _initialize.pxd  _initialize.pyx  edit_based.hpp
src/cython/distance/: CMakeLists.txt  Hamming.pyx  Indel.pyx  Jaro.pyx  JaroWinkler.pyx  Levenshtein.pyx  _initialize.pxd  _initialize.pyx  edit_based.hpp
src/rapidfuzz/: CMakeLists.txt  __init__.pxd  __init__.py  __init__.pyi  _common_py.py  _feature_detector.py  _feature_detector_cpp.pyx  _utils.py  _utils.pyi  cpp_common.hpp  cpp_common.pxd  fuzz.py  fuzz.pyi  fuzz_cpp.hpp  fuzz_cpp.py  fuzz_cpp.pyx  fuzz_cpp_avx2.pyx  fuzz_cpp_impl_avx2.pyx  fuzz_cpp_sse2.pyx  fuzz_py.py  fuzz_py.pyi  generate.sh  levenshtein.py  process.py  process.pyi  process_cdist_cpp.hpp  process_cdist_cpp.py  process_cdist_cpp.pyx  process_cdist_cpp_impl.pyi  process_cdist_cpp_impl.pyx  process_cdist_py.py  process_cpp.hpp  process_cpp.py  process_cpp.pyx  process_cpp_impl.pyi  process_cpp_impl.pyx  process_py.py  py_fuzz.py  py_string_metric.py  rapidfuzz.h  (+13 more)
src/rapidfuzz/FeatureDetector/: CpuInfo.hpp
src/rapidfuzz/__pyinstaller/: __init__.py  hook-rapidfuzz.py  test_rapidfuzz_packaging.py
src/rapidfuzz/algorithm/edit_based/: CMakeLists.txt  Indel.pyi  JaroWinkler.pyi  Levenshtein.pyi  Levenshtein.pyx  __init__.py
src/rapidfuzz/details/: common.py
src/rapidfuzz/distance/: CMakeLists.txt  DamerauLevenshtein.py  DamerauLevenshtein.pyi  DamerauLevenshtein_cpp.py  DamerauLevenshtein_cpp.pyx  DamerauLevenshtein_cpp_avx2.py  DamerauLevenshtein_py.py  DamerauLevenshtein_py.pyi  Hamming.py  Hamming.pyi  Hamming_cpp.py  Hamming_cpp.pyx  Hamming_cpp_avx2.py  Hamming_py.py  Hamming_py.pyi  Indel.py  Indel.pyi  Indel_cpp.py  Indel_cpp.pyx  Indel_cpp_avx2.py  Indel_py.py  Indel_py.pyi  Jaro.py  Jaro.pyi  JaroWinkler.py  JaroWinkler.pyi  JaroWinkler_cpp.py  JaroWinkler_cpp_avx2.py  JaroWinkler_py.py  JaroWinkler_py.pyi  Jaro_cpp.py  Jaro_cpp_avx2.py  Jaro_py.py  Jaro_py.pyi  LCSseq.py  LCSseq_cpp.py  LCSseq_cpp.pyx  LCSseq_cpp_avx2.py  LCSseq_py.py  LCSseq_py.pyi  (+34 more)
src/rapidfuzz/simd/: edit_based_simd.impl  edit_based_simd.incl
src/rapidfuzz/simd/avx2/: edit_based_avx2.cpp  edit_based_avx2.hpp
src/rapidfuzz/simd/sse2/: edit_based_sse2.cpp  edit_based_sse2.hpp
tests/: common.py  test_cpp_fallback.py  test_fuzz.py  test_hypothesis.py  test_process.py  test_pure_python_fallback.py  test_string_metric.py  test_submodules.py  test_utils.py
tools/: backtrace  cythonize.bat  generate_cython.sh  generate_python.py  pyrightconfig.json  (+5 more)
(+111 files in other folders)
