[metadata]
name = rapidfuzz
version = file: VERSION
url = https://github.com/maxbachmann/rapidfuzz
author = Max Bachmann
author_email = contact@maxbachmann.de
description = rapid fuzzy string matching
long_description = file: README.md
long_description_content_type = text/markdown

license = MIT
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License

[options]
zip_safe = False
include_package_data = True
package_dir=
    =src
packages = find:
python_requires = >=3.5

[options.packages.find]
where=src
