function(create_cython_target _name)
    if(EXISTS ${CMAKE_CURRENT_LIST_DIR}/${_name}.cxx)
        set(${_name} ${CMAKE_CURRENT_LIST_DIR}/${_name}.cxx PARENT_SCOPE)
    else()
        find_package(Cython REQUIRED)
        # should use target_include_directories once this is supported by scikit-build
        include_directories(${RF_BASE_DIR}/rapidfuzz ${RF_BASE_DIR}/rapidfuzz/distance)
        add_cython_target(${_name} CXX)
        set(${_name} ${_name} PARENT_SCOPE)
    endif()
endfunction(create_cython_target)

create_cython_target(_initialize)
python_add_library(_initialize MODULE ${_initialize})
target_compile_features(_initialize PUBLIC cxx_std_14)
target_include_directories(_initialize PRIVATE ${RF_CAPI_PATH} ${RF_BASE_DIR}/rapidfuzz ${RF_BASE_DIR}/rapidfuzz/distance)
target_link_libraries(_initialize PRIVATE rapidfuzz::rapidfuzz jaro_winkler::jaro_winkler)
install(TARGETS _initialize LIBRARY DESTINATION rapidfuzz/distance)

create_cython_target(Hamming)
python_add_library(Hamming MODULE ${Hamming})
target_compile_features(Hamming PUBLIC cxx_std_14)
target_include_directories(Hamming PRIVATE ${RF_CAPI_PATH} ${RF_BASE_DIR}/rapidfuzz ${RF_BASE_DIR}/rapidfuzz/distance)
target_link_libraries(Hamming PRIVATE rapidfuzz::rapidfuzz jaro_winkler::jaro_winkler)
install(TARGETS Hamming LIBRARY DESTINATION rapidfuzz/distance)

create_cython_target(Levenshtein)
python_add_library(Levenshtein MODULE ${Levenshtein})
target_compile_features(Levenshtein PUBLIC cxx_std_14)
target_include_directories(Levenshtein PRIVATE ${RF_CAPI_PATH} ${RF_BASE_DIR}/rapidfuzz ${RF_BASE_DIR}/rapidfuzz/distance)
target_link_libraries(Levenshtein PRIVATE rapidfuzz::rapidfuzz jaro_winkler::jaro_winkler)
install(TARGETS Levenshtein LIBRARY DESTINATION rapidfuzz/distance)

create_cython_target(Indel)
python_add_library(Indel MODULE ${Indel})
target_compile_features(Indel PUBLIC cxx_std_14)
target_include_directories(Indel PRIVATE ${RF_CAPI_PATH} ${RF_BASE_DIR}/rapidfuzz ${RF_BASE_DIR}/rapidfuzz/distance)
target_link_libraries(Indel PRIVATE rapidfuzz::rapidfuzz jaro_winkler::jaro_winkler)
install(TARGETS Indel LIBRARY DESTINATION rapidfuzz/distance)

create_cython_target(LCSseq)
python_add_library(LCSseq MODULE ${LCSseq})
target_compile_features(LCSseq PUBLIC cxx_std_14)
target_include_directories(LCSseq PRIVATE ${RF_CAPI_PATH} ${RF_BASE_DIR}/rapidfuzz ${RF_BASE_DIR}/rapidfuzz/distance)
target_link_libraries(LCSseq PRIVATE rapidfuzz::rapidfuzz jaro_winkler::jaro_winkler)
install(TARGETS LCSseq LIBRARY DESTINATION rapidfuzz/distance)
